<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp" >

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/statusImg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/string_status"
                app:srcCompat="@drawable/off" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Status"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/status" />

        <TextView
            android:id="@+id/light"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/light" />

        <TextView
            android:id="@+id/lum"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/lum" />

        <TextView
            android:id="@+id/rain"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/fog" />

    </LinearLayout>

</android.widget.LinearLayout>